// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsEcsExecutionModule UT input changes should handle deployment change 1`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -12,3 +12,3 @@
        mountPoints = []
-       name = "backend-v1"
+       name = "change-backend-v1"
        portMappings = [{"
`;

exports[`AwsEcsExecutionModule UT input changes should handle desiredCount change 1`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -3,3 +3,3 @@
    cluster = var.ecs_cluster_region_qa.clusterArn
-   desired_count = 1
+   desired_count = 2
    launch_type = "FARGATE""
`;

exports[`AwsEcsExecutionModule UT input changes should handle executionId change 1`] = `
"- execution/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution/main.tf
resource "aws_ecs_service" "ecs-service-changed-execution-id" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "changed-execution-id"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-changed-execution-id.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-changed-execution-id.arn
}

- execution/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

+ execution/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-changed-execution-id" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

- execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

+ execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-changed-execution-id" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

+ execution/outputs.tf
output "ecs-service-changed-execution-id-serviceArn" {
  value = aws_ecs_service.ecs-service-changed-execution-id.id
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution/outputs.tf
output "ecs-task-definition-changed-execution-id-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-changed-execution-id.revision
}

+ execution/outputs.tf
output "ecs-task-definition-changed-execution-id-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-changed-execution-id.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

+ execution/outputs.tf
output "sec-grp-SecurityGroup-changed-execution-id-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-changed-execution-id.arn
}

+ execution/outputs.tf
output "sec-grp-SecurityGroup-changed-execution-id-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-changed-execution-id.id
}"
`;

exports[`AwsEcsExecutionModule UT should CUD 1`] = `
"# execution/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

# execution/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

# execution/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

  mock_outputs = {
    "ecs-cluster-region-qa" = "mock-ecs-cluster-region-qa"
    "iam-role-ServerRole-backend" = "mock-iam-role-ServerRole-backend"
    "subnet-region-private-subnet" = "mock-subnet-region-private-subnet"
    "vpc-region" = "mock-vpc-region"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

# execution/variables.tf
variable "ecs_cluster_region_qa" {}

variable "iam_role_ServerRole_backend" {}

variable "subnet_region_private_subnet" {}

variable "vpc_region" {}

# testModule/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    external = {
      source = "hashicorp/external"
    }
    null = {
      source = "hashicorp/null"
    }
  }
}

data "external" "ecs-cluster-region-qa" {
  program = ["cat", "\${path.module}/.octo-outputs/ecs-cluster-region-qa.json"]
  depends_on = [null_resource.ecs-cluster-region-qa]
}

data "external" "efs-region-test-filesystem" {
  program = ["cat", "\${path.module}/.octo-outputs/efs-region-test-filesystem.json"]
  depends_on = [null_resource.efs-region-test-filesystem]
}

data "external" "efs-mount-region-private-subnet-test-filesystem" {
  program = ["cat", "\${path.module}/.octo-outputs/efs-mount-region-private-subnet-test-filesystem.json"]
  depends_on = [null_resource.efs-mount-region-private-subnet-test-filesystem]
}

data "external" "iam-role-ServerRole-backend" {
  program = ["cat", "\${path.module}/.octo-outputs/iam-role-ServerRole-backend.json"]
  depends_on = [null_resource.iam-role-ServerRole-backend]
}

data "external" "subnet-region-private-subnet" {
  program = ["cat", "\${path.module}/.octo-outputs/subnet-region-private-subnet.json"]
  depends_on = [null_resource.subnet-region-private-subnet]
}

data "external" "vpc-region" {
  program = ["cat", "\${path.module}/.octo-outputs/vpc-region.json"]
  depends_on = [null_resource.vpc-region]
}

resource "null_resource" "ecs-cluster-region-qa" {
  triggers = {
    octo_properties_hash = "da2c133b3ff12ab8"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=ecs-cluster-region-qa > \${path.module}/.octo-outputs/ecs-cluster-region-qa.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=ecs-cluster-region-qa"
  }
}

resource "null_resource" "efs-region-test-filesystem" {
  triggers = {
    octo_properties_hash = "1a31f0c2f24ce06f"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=efs-region-test-filesystem > \${path.module}/.octo-outputs/efs-region-test-filesystem.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=efs-region-test-filesystem"
  }
}

resource "null_resource" "efs-mount-region-private-subnet-test-filesystem" {
  triggers = {
    octo_properties_hash = "4c9717384d508cbf"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=efs-mount-region-private-subnet-test-filesystem > \${path.module}/.octo-outputs/efs-mount-region-private-subnet-test-filesystem.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=efs-mount-region-private-subnet-test-filesystem"
  }
}

resource "null_resource" "iam-role-ServerRole-backend" {
  triggers = {
    octo_properties_hash = "6d1a33e75e52b61d"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=iam-role-ServerRole-backend > \${path.module}/.octo-outputs/iam-role-ServerRole-backend.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=iam-role-ServerRole-backend"
  }
}

resource "null_resource" "subnet-region-private-subnet" {
  triggers = {
    octo_properties_hash = "8f35c7a4d38e129c"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=subnet-region-private-subnet > \${path.module}/.octo-outputs/subnet-region-private-subnet.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=subnet-region-private-subnet"
  }
}

resource "null_resource" "vpc-region" {
  triggers = {
    octo_properties_hash = "f548f82f959ec360"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=vpc-region > \${path.module}/.octo-outputs/vpc-region.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=vpc-region"
  }
}

# testModule/outputs.tf
output "ecs-cluster-region-qa" {
  value = data.external.ecs-cluster-region-qa.result
}

output "efs-region-test-filesystem" {
  value = data.external.efs-region-test-filesystem.result
}

output "efs-mount-region-private-subnet-test-filesystem" {
  value = data.external.efs-mount-region-private-subnet-test-filesystem.result
}

output "iam-role-ServerRole-backend" {
  value = data.external.iam-role-ServerRole-backend.result
}

output "subnet-region-private-subnet" {
  value = data.external.subnet-region-private-subnet.result
}

output "vpc-region" {
  value = data.external.vpc-region.result
}

# testModule/terragrunt.hcl
<empty>

# testModule/variables.tf
<empty>"
`;

exports[`AwsEcsExecutionModule UT should CUD 3`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -4,3 +4,3 @@
      {
-       command = ["/bin/sh"]
+       command = ["npm", "start"]
        environment = [{"
`;

exports[`AwsEcsExecutionModule UT should CUD 5`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -4,3 +4,3 @@
      {
-       command = ["npm", "start"]
+       command = ["/bin/sh"]
        environment = [{"
`;

exports[`AwsEcsExecutionModule UT should CUD 7`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -3,3 +3,3 @@
    cluster = var.ecs_cluster_region_qa.clusterArn
-   desired_count = 1
+   desired_count = 2
    launch_type = "FARGATE""
`;

exports[`AwsEcsExecutionModule UT should CUD 9`] = `
"~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -11,3 +11,7 @@
        image = "docker.io"
-       mountPoints = []
+       mountPoints = [{
+           containerPath = "/mnt/test-filesystem"
+           readOnly = false
+           sourceVolume = "test-filesystem"
+         }]
        name = "backend-v1"
@@ -27,2 +31,8 @@
    task_role_arn = var.iam_role_ServerRole_backend.Arn
+   volume {
+     efs_volume_configuration {
+       file_system_id = var.efs_region_test_filesystem.FileSystemId
+     }
+     name = "test-filesystem"
+   }
  }

~ execution/terragrunt.hcl inputs = {
@@ -2,2 +2,3 @@
    ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
+   efs_region_test_filesystem = dependency.testModule.outputs["efs-region-test-filesystem"]
    iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]

~ execution/terragrunt.hcl mock_outputs = {
@@ -2,2 +2,3 @@
      "ecs-cluster-region-qa" = "mock-ecs-cluster-region-qa"
+     "efs-region-test-filesystem" = "mock-efs-region-test-filesystem"
      "iam-role-ServerRole-backend" = "mock-iam-role-ServerRole-backend"

+ execution/variables.tf
variable "efs_region_test_filesystem" {}"
`;

exports[`AwsEcsExecutionModule UT should CUD 11`] = `
"+ execution/main.tf
depends_on = [aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet]
}

+ execution/main.tf
resource "aws_vpc_security_group_egress_rule" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet_egress_0" {
  provider = aws._123-us-east-1
  cidr_ipv4 = "10.0.0.0/8"
  description = "tcp 8080-8080 10.0.0.0/8"
  ip_protocol = "tcp"
  security_group_id = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
  from_port = 8080
  to_port = 8080"
`;

exports[`AwsEcsExecutionModule UT should CUD 13`] = `
"- execution/main.tf
depends_on = [aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet]
}

- execution/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- execution/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 2
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = [{
          containerPath = "/mnt/test-filesystem"
          readOnly = false
          sourceVolume = "test-filesystem"
        }]
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
  volume {
    efs_volume_configuration {
      file_system_id = var.efs_region_test_filesystem.FileSystemId
    }
    name = "test-filesystem"
  }
}

- execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution/main.tf
resource "aws_vpc_security_group_egress_rule" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet_egress_0" {
  provider = aws._123-us-east-1
  cidr_ipv4 = "10.0.0.0/8"
  description = "tcp 8080-8080 10.0.0.0/8"
  ip_protocol = "tcp"
  security_group_id = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
  from_port = 8080
  to_port = 8080

- execution/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- execution/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

- execution/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

- execution/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

- execution/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

- execution/terragrunt.hcl
inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  efs_region_test_filesystem = dependency.testModule.outputs["efs-region-test-filesystem"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

- execution/terragrunt.hcl
mock_outputs = {
    "ecs-cluster-region-qa" = "mock-ecs-cluster-region-qa"
    "efs-region-test-filesystem" = "mock-efs-region-test-filesystem"
    "iam-role-ServerRole-backend" = "mock-iam-role-ServerRole-backend"
    "subnet-region-private-subnet" = "mock-subnet-region-private-subnet"
    "vpc-region" = "mock-vpc-region"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

- execution/variables.tf
variable "ecs_cluster_region_qa" {}

- execution/variables.tf
variable "efs_region_test_filesystem" {}

- execution/variables.tf
variable "iam_role_ServerRole_backend" {}

- execution/variables.tf
variable "subnet_region_private_subnet" {}

- execution/variables.tf
variable "vpc_region" {}"
`;

exports[`AwsEcsExecutionModule UT should CUD tags 1`] = `
"# execution/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
  tags = {
    tag1 = "value1"
  }
}

resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
  tags = {
    tag1 = "value1"
  }
}

resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
  tags = {
    tag1 = "value1"
  }
}

resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
  tags = {
    tag1 = "value1"
  }
}

# execution/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

# execution/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

  mock_outputs = {
    "ecs-cluster-region-qa" = "mock-ecs-cluster-region-qa"
    "iam-role-ServerRole-backend" = "mock-iam-role-ServerRole-backend"
    "subnet-region-private-subnet" = "mock-subnet-region-private-subnet"
    "vpc-region" = "mock-vpc-region"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

# execution/variables.tf
variable "ecs_cluster_region_qa" {}

variable "iam_role_ServerRole_backend" {}

variable "subnet_region_private_subnet" {}

variable "vpc_region" {}

# testModule/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    external = {
      source = "hashicorp/external"
    }
    null = {
      source = "hashicorp/null"
    }
  }
}

data "external" "ecs-cluster-region-qa" {
  program = ["cat", "\${path.module}/.octo-outputs/ecs-cluster-region-qa.json"]
  depends_on = [null_resource.ecs-cluster-region-qa]
}

data "external" "efs-region-test-filesystem" {
  program = ["cat", "\${path.module}/.octo-outputs/efs-region-test-filesystem.json"]
  depends_on = [null_resource.efs-region-test-filesystem]
}

data "external" "efs-mount-region-private-subnet-test-filesystem" {
  program = ["cat", "\${path.module}/.octo-outputs/efs-mount-region-private-subnet-test-filesystem.json"]
  depends_on = [null_resource.efs-mount-region-private-subnet-test-filesystem]
}

data "external" "iam-role-ServerRole-backend" {
  program = ["cat", "\${path.module}/.octo-outputs/iam-role-ServerRole-backend.json"]
  depends_on = [null_resource.iam-role-ServerRole-backend]
}

data "external" "subnet-region-private-subnet" {
  program = ["cat", "\${path.module}/.octo-outputs/subnet-region-private-subnet.json"]
  depends_on = [null_resource.subnet-region-private-subnet]
}

data "external" "vpc-region" {
  program = ["cat", "\${path.module}/.octo-outputs/vpc-region.json"]
  depends_on = [null_resource.vpc-region]
}

resource "null_resource" "ecs-cluster-region-qa" {
  triggers = {
    octo_properties_hash = "da2c133b3ff12ab8"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=ecs-cluster-region-qa > \${path.module}/.octo-outputs/ecs-cluster-region-qa.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=ecs-cluster-region-qa"
  }
}

resource "null_resource" "efs-region-test-filesystem" {
  triggers = {
    octo_properties_hash = "1a31f0c2f24ce06f"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=efs-region-test-filesystem > \${path.module}/.octo-outputs/efs-region-test-filesystem.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=efs-region-test-filesystem"
  }
}

resource "null_resource" "efs-mount-region-private-subnet-test-filesystem" {
  triggers = {
    octo_properties_hash = "4c9717384d508cbf"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=efs-mount-region-private-subnet-test-filesystem > \${path.module}/.octo-outputs/efs-mount-region-private-subnet-test-filesystem.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=efs-mount-region-private-subnet-test-filesystem"
  }
}

resource "null_resource" "iam-role-ServerRole-backend" {
  triggers = {
    octo_properties_hash = "6d1a33e75e52b61d"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=iam-role-ServerRole-backend > \${path.module}/.octo-outputs/iam-role-ServerRole-backend.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=iam-role-ServerRole-backend"
  }
}

resource "null_resource" "subnet-region-private-subnet" {
  triggers = {
    octo_properties_hash = "8f35c7a4d38e129c"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=subnet-region-private-subnet > \${path.module}/.octo-outputs/subnet-region-private-subnet.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=subnet-region-private-subnet"
  }
}

resource "null_resource" "vpc-region" {
  triggers = {
    octo_properties_hash = "f548f82f959ec360"
  }
  provisioner "local-exec" {
    command = "mkdir -p \${path.module}/.octo-outputs && octo --mode=run-action --resourceId=vpc-region > \${path.module}/.octo-outputs/vpc-region.json"
  }
  provisioner "local-exec" {
    when = destroy
    command = "octo --mode=run-action --resourceId=vpc-region"
  }
}

# testModule/outputs.tf
output "ecs-cluster-region-qa" {
  value = data.external.ecs-cluster-region-qa.result
}

output "efs-region-test-filesystem" {
  value = data.external.efs-region-test-filesystem.result
}

output "efs-mount-region-private-subnet-test-filesystem" {
  value = data.external.efs-mount-region-private-subnet-test-filesystem.result
}

output "iam-role-ServerRole-backend" {
  value = data.external.iam-role-ServerRole-backend.result
}

output "subnet-region-private-subnet" {
  value = data.external.subnet-region-private-subnet.result
}

output "vpc-region" {
  value = data.external.vpc-region.result
}

# testModule/terragrunt.hcl
<empty>

# testModule/variables.tf
<empty>"
`;

exports[`AwsEcsExecutionModule UT should CUD tags 3`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -13,3 +13,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -28,3 +28,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsEcsExecutionModule UT should CUD tags 5`] = `
"~ execution/main.tf resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
@@ -12,6 +12,2 @@
    task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ execution/main.tf resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
@@ -27,6 +27,2 @@
    task_role_arn = var.iam_role_ServerRole_backend.Arn
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
@@ -3,6 +3,2 @@
    vpc_id = var.vpc_region.VpcId
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }

~ execution/main.tf resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
@@ -3,6 +3,2 @@
    vpc_id = var.vpc_region.VpcId
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsEcsExecutionModule UT should handle moduleId change 1`] = `
"- execution-1/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- execution-1/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution-1/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

- execution-1/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution-1/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

- execution-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- execution-1/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

- execution-1/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

- execution-1/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

- execution-1/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

- execution-1/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

- execution-1/terragrunt.hcl
inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

- execution-1/terragrunt.hcl
mock_outputs = {
    "ecs-cluster-region-qa" = "mock-ecs-cluster-region-qa"
    "iam-role-ServerRole-backend" = "mock-iam-role-ServerRole-backend"
    "subnet-region-private-subnet" = "mock-subnet-region-private-subnet"
    "vpc-region" = "mock-vpc-region"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

- execution-1/variables.tf
variable "ecs_cluster_region_qa" {}

- execution-1/variables.tf
variable "iam_role_ServerRole_backend" {}

- execution-1/variables.tf
variable "subnet_region_private_subnet" {}

- execution-1/variables.tf
variable "vpc_region" {}

+ execution-2/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

+ execution-2/main.tf
resource "aws_ecs_service" "ecs-service-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  cluster = var.ecs_cluster_region_qa.clusterArn
  desired_count = 1
  launch_type = "FARGATE"
  name = "backend-v1-region-qa-private-subnet"
  network_configuration {
    assign_public_ip = false
    security_groups = [aws_security_group.sec-grp-SecurityGroup-backend.id, aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id]
    subnets = [var.subnet_region_private_subnet.SubnetId]
  }
  task_definition = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution-2/main.tf
resource "aws_ecs_task_definition" "ecs-task-definition-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  container_definitions = jsonencode([
    {
      command = ["/bin/sh"]
      environment = [{
          name = "NODE_ENV"
          value = "qa"
        }]
      essential = true
      image = "docker.io"
      mountPoints = []
      name = "backend-v1"
      portMappings = [{
          containerPort = 8080
          hostPort = 8080
          protocol = "tcp"
        }]
    }
  ])
  cpu = "256"
  execution_role_arn = var.iam_role_ServerRole_backend.Arn
  family = "qa-region-private-subnet-backend"
  memory = "512"
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  task_role_arn = var.iam_role_ServerRole_backend.Arn
}

+ execution-2/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

+ execution-2/main.tf
resource "aws_security_group" "sec-grp-SecurityGroup-backend" {
  provider = aws._123-us-east-1
  vpc_id = var.vpc_region.VpcId
}

+ execution-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ execution-2/outputs.tf
output "ecs-service-backend-v1-region-qa-private-subnet-serviceArn" {
  value = aws_ecs_service.ecs-service-backend-v1-region-qa-private-subnet.id
}

+ execution-2/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-revision" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.revision
}

+ execution-2/outputs.tf
output "ecs-task-definition-backend-v1-region-qa-private-subnet-taskDefinitionArn" {
  value = aws_ecs_task_definition.ecs-task-definition-backend-v1-region-qa-private-subnet.arn
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.arn
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend.id
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-Arn" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.arn
}

+ execution-2/outputs.tf
output "sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet-GroupId" {
  value = aws_security_group.sec-grp-SecurityGroup-backend-v1-region-qa-private-subnet.id
}

+ execution-2/terragrunt.hcl
dependency "testModule" {
  config_path = "../testModule"

+ execution-2/terragrunt.hcl
inputs = {
  ecs_cluster_region_qa = dependency.testModule.outputs["ecs-cluster-region-qa"]
  iam_role_ServerRole_backend = dependency.testModule.outputs["iam-role-ServerRole-backend"]
  subnet_region_private_subnet = dependency.testModule.outputs["subnet-region-private-subnet"]
  vpc_region = dependency.testModule.outputs["vpc-region"]
}

+ execution-2/terragrunt.hcl
mock_outputs = {
    "ecs-cluster-region-qa" = "mock-ecs-cluster-region-qa"
    "iam-role-ServerRole-backend" = "mock-iam-role-ServerRole-backend"
    "subnet-region-private-subnet" = "mock-subnet-region-private-subnet"
    "vpc-region" = "mock-vpc-region"
  }
  mock_outputs_allowed_terraform_commands = ["init", "plan", "validate"]
}

+ execution-2/variables.tf
variable "ecs_cluster_region_qa" {}

+ execution-2/variables.tf
variable "iam_role_ServerRole_backend" {}

+ execution-2/variables.tf
variable "subnet_region_private_subnet" {}

+ execution-2/variables.tf
variable "vpc_region" {}"
`;
